# cross

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.hack  LICENSE-MIT  README.md  TARGET-NOTES.md  azure-pipelines.yml  bors.toml  build-docker-image.sh  build.rs  clippy.toml  deny.toml  fake_vol_mgr.sh  rustfmt.yml  targets.toml
.cargo/: config.toml
.changes/: 1005.json  1006.json  1018.json  1023.json  1024.json  1028.json  1032.json  1033.json  1038-1220-1482.json  1038-1220.json  1038.json  1039.json  1049-1142.json  1049.json  1053.json  1054.json  1057.json  1063-1125-1134.json  1063-1125.json  1063.json  1073.json  1078.json  1084.json  1085.json  1105.json  1112.json  1118.json  1123.json  1138.json  1159.json  1160.json  1164.json  1166.json  1183.json  1199.json  1207.json  1220.json  1246.json  1248.json  1260.json  (+92 more)
.changes/template/: 940.json  978.json  979-981.json  CHANGELOG.md  issue440.json
.github/: CODEOWNERS  bors.toml  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: b_issue_report.yml  config.yml  z_feature_request.yml
.github/workflows/: changelog.yml  ci.yml  docker.yml  try.yml  weekly.yml
ci/: after_success.sh  azure-install-rust.yml  before_cache.sh  before_deploy.sh  build_release.sh  deploy.sh  docker_push.sh  extract_image_info.sh  extract_target_info.sh  install.sh  script.sh  shared.sh  test-bisect.sh  test-cross-image.sh  test-docker-in-docker.sh  test-foreign-toolchain.sh  test-podman.sh  test-remote.sh  test-rest-args.sh  test-zig-image.sh  test.sh
cross-dev/: main.rs  target_info.rs  target_info.sh
cross_test/: Cargo.toml
crosstool-ng/: arm-unknown-linux-gnueabihf.config.in  configure.sh  loongarch64-unknown-linux-gnu.config.in  loongarch64-unknown-linux-musl.config.in
docker/: .dockerignore  Dockerfile.aarch64-apple-ios  Dockerfile.aarch64-linux-android  Dockerfile.aarch64-unknown-freebsd  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-gnu.centos  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.aarch64_be-unknown-linux-gnu  Dockerfile.aarch64_be-unknown-linux-musl  Dockerfile.arm-linux-androideabi  Dockerfile.arm-unknown-linux-gnueabi  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.arm-unknown-linux-musleabi  Dockerfile.arm-unknown-linux-musleabihf  Dockerfile.armv5te-unknown-linux-gnueabi  Dockerfile.armv5te-unknown-linux-musleabi  Dockerfile.armv7-linux-androideabi  Dockerfile.armv7-unknown-linux-gnueabi  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-musleabi  Dockerfile.armv7-unknown-linux-musleabihf  Dockerfile.asmjs-unknown-emscripten  Dockerfile.base.centos  Dockerfile.base.emscripten  Dockerfile.base.ubuntu  Dockerfile.context  Dockerfile.cross  Dockerfile.i586-unknown-linux-gnu  Dockerfile.i586-unknown-linux-musl  Dockerfile.i686-linux-android  Dockerfile.i686-pc-windows-gnu  Dockerfile.i686-unknown-freebsd  Dockerfile.i686-unknown-linux-gnu  Dockerfile.i686-unknown-linux-musl  Dockerfile.loongarch64-unknown-linux-gnu  Dockerfile.loongarch64-unknown-linux-musl  Dockerfile.mips-unknown-linux-gnu  Dockerfile.mips-unknown-linux-musl  Dockerfile.mips64-unknown-linux-gnuabi64  Dockerfile.mips64-unknown-linux-muslabi64  (+119 more)
docker/aarch64-linux-android/: Dockerfile
docker/aarch64-unknown-linux-gnu/: Dockerfile
docker/aarch64-unknown-linux-musl/: Dockerfile
docker/android/: README.md  pyproject.toml  tox.ini
docker/arm-linux-androideabi/: Dockerfile
docker/arm-unknown-linux-gnueabi/: Dockerfile
docker/arm-unknown-linux-gnueabihf/: Dockerfile  arm-linux-gnueabihf.config  build-toolchains.sh
docker/arm-unknown-linux-musleabi/: Dockerfile
docker/arm-unknown-linux-musleabihf/: Dockerfile
docker/armel-unknown-linux-gnueabi/: Dockerfile  armel-unknown-linux-gnueabi.json
docker/armv5te-unknown-linux-gnueabi/: Dockerfile
docker/armv5te-unknown-linux-musleabi/: Dockerfile
docker/armv7-linux-androideabi/: Dockerfile
docker/armv7-unknown-linux-gnueabihf/: Dockerfile
docker/armv7-unknown-linux-musleabihf/: Dockerfile
docker/asmjs-unknown-emscripten/: Dockerfile
docker/crosstool-config/: aarch64_be-unknown-linux-gnu.config  aarch64_be-unknown-linux-musl.config  arm-unknown-linux-gnueabihf.config  loongarch64-unknown-linux-gnu.config  loongarch64-unknown-linux-musl.config  powerpc64le-unknown-linux-musl.config  riscv64gc-unknown-linux-musl.config
docker/disabled/: Dockerfile.i686-pc-windows-gnu  Dockerfile.i686-unknown-freebsd  Dockerfile.powerpc64-unknown-linux-gnu  Dockerfile.x86_64-unknown-dragonfly  Dockerfile.x86_64-unknown-freebsd  dragonfly.sh
docker/i586-unknown-linux-gnu/: Dockerfile
docker/i586-unknown-linux-musl/: Dockerfile
docker/i686-linux-android/: Dockerfile
docker/i686-pc-windows-gnu/: Dockerfile
docker/i686-unknown-freebsd/: Dockerfile
docker/i686-unknown-linux-gnu/: Dockerfile
docker/i686-unknown-linux-musl/: Dockerfile
docker/mips-unknown-linux-gnu/: Dockerfile
docker/mips-unknown-linux-musl/: Dockerfile
docker/mips64-unknown-linux-gnuabi64/: Dockerfile
docker/mips64el-unknown-linux-gnuabi64/: Dockerfile
docs/: cargo_configuration.md  config_file.md  cross_toml.md  custom_images.md  environment_variables.md  getting-started.md  recipes.md  remote.md  unstable_features.md
small-lock/: Cargo.toml
small-lock/src/: lib.rs  unix.rs  windows.rs
src/: build.rs  cargo.rs  cargo_config.rs  cargo_toml.rs  cli.rs  config.rs  cross_config.rs  cross_toml.rs  docker.rs  errors.rs  extensions.rs  file.rs  id.rs  interpreter.rs  lib.rs  main.rs  qemu.rs  runner.rs  rustc.rs  rustup.rs  seccomp.json  shell.rs  temp.rs  tests.rs  volume.rs
tests/: README.md  cli.rs
volume_manager/: Dockerfile  vol_mgr.sh
xtask/: Cargo.toml
xtask/src/: build_docker_image.rs  changelog.rs  ci.rs  codegen.rs  crosstool.rs  hooks.rs  install_git_hooks.rs  main.rs  pre-commit  pre-commit.sh  pre-push.sh  readelf.rs  readelf.sh  target_info.rs  target_info.sh  temp.rs  util.rs
xtask/src/ci/: release.rs  target_matrix.rs
(+123 files in other folders)
