[package]
build = "src/build.rs"
description = "Zero setup cross compilation and cross testing"
documentation = "https://github.com/cross-rs/cross"
keywords = ["cross", "compilation", "testing", "tool"]
license = "MIT OR Apache-2.0"
name = "cross"
repository = "https://github.com/cross-rs/cross"
version = "0.2.6"
edition = "2024"
include = [
  "src/**/*",
  "docs/*.md",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "assets/*",
]
rust-version = "1.92.0"

[features]
default = []
dev = []

[workspace]
members = ["xtask"]

[dependencies]
is-terminal = "0.4.2"
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false, features = ["track-caller"] }
eyre = "0.6.12"
thiserror = "2.0"
home = "0.5.11"
rustc_version = "0.4.0"
toml = "0.9"
which = "8.0"
shell-escape = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
serde_ignored = "0.1.12"
shell-words = "1.1.0"
const-sha1 = "0.3"
signal-hook = { version = "0.4" }
directories = "6.0"
walkdir = { version = "2.3.2", optional = true }
tempfile = "3.21"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
semver = "1.0.26"
is_ci = "1.2.0"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["user"] }
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
dunce = "1.0.5"

[profile.release]
lto = true

[dev-dependencies]
regex = "1.11.2"
once_cell = "1.21.3"
ignore = "0.4.23"

[package.metadata.release]
push = false
publish = false
tag = false
consolidate-commits = false
pre-release-hook = ["cargo", "xtask", "changelog", "build", "--release", "{{version}}"]
pre-release-commit-message = "release version {{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...v{{version}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-url -->"
replace = "<!-- next-url -->\n\n[Unreleased]: https://github.com/cross-rs/{{crate_name}}/compare/v{{version}}...HEAD"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "docs/config_file.md"
search = "(# Translates to `.*?:).*?(-centos`)"
replace = "${1}{{version}}$2"
exactly = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
