[package]
build = "build.rs"
description = "Zero setup cross compilation and cross testing"
documentation = "https://github.com/rust-embedded/cross"
keywords = ["cross", "compilation", "testing", "tool"]
license = "MIT OR Apache-2.0"
name = "cross"
repository = "https://github.com/rust-embedded/cross"
version = "0.2.1"
edition = "2018"
