[package]
documentation = "https://github.com/cross-rs/cross"
license = "MIT OR Apache-2.0"
name = "xtask"
repository = "https://github.com/cross-rs/cross"
version = "0.0.0-dev.0"
edition = "2021"
publish = false


[dependencies]
cross = { path = "..", features = ["dev"] }
walkdir = "2.3.3"
color-eyre = "0.6.2"
eyre = "0.6.8"
clap = { version = "4.1", features = ["derive", "env"] }
which = { version = "4.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
toml = "0.7"
once_cell = "1.17"
semver = "1"
chrono = "0.4"
wildmatch = "2.1.1"
