[package]
documentation = "https://github.com/cross-rs/cross"
license = "MIT OR Apache-2.0"
name = "xtask"
repository = "https://github.com/cross-rs/cross"
version = "0.0.0-dev.0"
edition = "2021"
publish = false


[dependencies]
cross = { path = "..", features = ["dev"] }
walkdir = "2.5.0"
color-eyre = "0.6.5"
eyre = "0.6.12"
clap = { version = "4.5.47", features = ["derive", "env"] }
which = { version = "8.0.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shell-words = "1.1.0"
toml = "0.9.5"
once_cell = "1.21.3"
semver = "1.0.26"
chrono = "0.4.41"
wildmatch = "2.4.0"
